# RayTracer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Disc.cpp  Disc.h  Eye.cpp  Eye.h  Global.h  Hit.cpp  Hit.h  Identifier.cpp  Identifier.h  Material.cpp  Material.h  Math.cpp  Math.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Types.h
